绝对路径改为相对路径

--- a/vue/index.html
+++ b/vue/index.html
@@ -57,7 +57,7 @@
     // axios实例
 
     const instance = axios.create({
-        baseURL: "http://localhost:63342/vueproject/vuetest1/",
+        baseURL: "./",
         timeout: 5000,
     });
 
