--- a/vue/index.html
+++ b/vue/index.html
@@ -337,6 +337,16 @@
                 };
 
                 //post上传文件和获取返回值
+
+                // import {qs} from './vue/js/axios.js' ?不清楚你的具体路径
+                //axios.defaults.headers.post['Content-Type'] = 'application/x-www-form-urlencoded';
+                //let data = qs.stringify(param)//我看你原来用的param
+                // axios({
+                //       method:'post',
+                //       data:data
+
+                //       })
+                //添加qs处理大文件post
                 axios.post("./", param, config,maxPostSize=0)
                     .then((response)=>{
                         console.log(response);
