fix bug: 前端正确提交分析任务表单，后端接受

--- a/vue/index.html
+++ b/vue/index.html
@@ -341,14 +341,12 @@
                 // axios.post("./", param, config,maxPostSize=0)
 
                 // import qs from './js/qs.js'
-                axios.defaults.headers.post['Content-Type'] = 'application/x-www-form-urlencoded';
-                let data = Qs.stringify(param)
+                axios.defaults.headers.post['Content-Type'] = 'multipart/form-data';
                 axios({
-                    url:'./',
-                      method:'post',
-                      data:data
-
-                      })
+                    url: '/task/',
+                    method: 'post',
+                    data: param
+                })
 
                     .then((response)=>{
                         console.log(response);
